--- a/framework/src/main/AndroidManifest.xml
+++ b/framework/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.framework" />
+<manifest package="com.example.framework" />
