--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven{url rootProject.ext.maven["bmobUrl"]}
+        maven { url rootProject.ext.maven["jitpack"] }
     }
 }
 
