--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
+    //HttpClient
+    useLibrary rootProject.ext.dependencies["httpclient"]
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     buildToolsVersion rootProject.ext.android["buildToolsVersion"]
 
@@ -42,4 +44,26 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    api rootProject.ext.dependencies["bmobsdk"]
+    api rootProject.ext.dependencies["rxjava2"]
+    api rootProject.ext.dependencies["rxandroid2"]
+    api rootProject.ext.dependencies["okio"]
+    api rootProject.ext.dependencies["gson"]
+    api rootProject.ext.dependencies["okhttp3"]
+    api rootProject.ext.dependencies["tagcloud"]
+    api rootProject.ext.dependencies["circleimageview"]
+    api rootProject.ext.dependencies["datepicker"]
+    api rootProject.ext.dependencies["glide"]
+    api rootProject.ext.dependencies["recyclerview"]
+    api rootProject.ext.dependencies["litepal"]
+    api rootProject.ext.dependencies["eventbus"]
+    api rootProject.ext.dependencies["tablayout"]
+    api rootProject.ext.dependencies["photoview"]
+    api rootProject.ext.dependencies["3dmap"]
+    api rootProject.ext.dependencies["location"]
+    api rootProject.ext.dependencies["search"]
+    api rootProject.ext.dependencies["bugly"]
+    api rootProject.ext.dependencies["buglyndk"]
+    api rootProject.ext.dependencies["zxing"]
+    api rootProject.ext.dependencies["videoplayer"]
 }
