--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.AddFriendActivity"
-            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".ui.ContactFriendActivity"
+            android:theme="@style/AppTheme"
+            android:label="@string/text_add_friend_contact"></activity>
+        <activity
+            android:name=".ui.AddFriendActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.FirstUploadActivity"
             android:theme="@style/AppTheme" />
