融云集成和服务连接

--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     api rootProject.ext.dependencies["buglyndk"]
     api rootProject.ext.dependencies["zxing"]
     api rootProject.ext.dependencies["videoplayer"]
+    api project(path: ':IMLib')
 }
