--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.NewFriendActivity"></activity>
+        <activity android:name=".ui.ChatActivity" android:theme="@style/AppTheme"/>
+        <activity android:name=".ui.NewFriendActivity" />
         <activity android:name=".ui.UserInfoActivity" /> <!-- 离线消息 -->
         <receiver
             android:name=".receiver.SealNotificationReceiver"
