发送图片消息(由于在数据绑定中大意写错，调试很久，还有初次测试，pixel相机文件错误，发送了一条空的url，导致两个浪费时间的bug)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.ChatActivity" android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".ui.ImagePreviewActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity
+            android:name=".ui.ChatActivity"
+            android:theme="@style/AppTheme" />
         <activity android:name=".ui.NewFriendActivity" />
         <activity android:name=".ui.UserInfoActivity" /> <!-- 离线消息 -->
         <receiver
